--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="action_settings">Setting</string>
     <string name="action_about">About Us</string>
     <string name="search_mosque_detals">Mosque Details</string>
+    <string name="action_logout">Logout</string>
 </resources>
