Complete app revision 0.3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,9 @@
     <string name="alertFieldEmptyTitle">Field Empty</string>
     <string name="alertFieldEmptyMessage">Please Fill All * Sign Field With Valid Input!</string>
     <string name="alertInvalidInputTitle">Invalid Input</string>
-    <string name="alertInvalidInputHour">Hour cant be greater then 12 !</string>
+    <string name="alertInvalidInputHour">Hour can't be greater then 12 !</string>
     <string name="alertFieldEmptyMessage2">Please Fill All * Sign Field With Valid Input!</string>
-    <string name="alertInvalidInputMinute">Minute cant be greater then 60 !</string>
+    <string name="alertInvalidInputMinute">Minute can't be greater then 60 !</string>
     <string name="all">All</string>
     <string name="distanceUnit">km</string>
     <string name="km">km</string>
@@ -35,7 +35,7 @@
     <string name="alertMessageGps">Please Enable Gps</string>
     <string name="aboutus">Bismullah ir-Rahman it-Rahim\n\n\n\n
 
-May Allah bless the Prophet and his companions for each of the namaz observed and prayed because of this application, and may he further rewaed and bless the Ummah, my parents (Sunhera and Salim Kaliwala), my grandparents (Mumtaz and Usman Kaliwala) (Abeda and Yusuf Bagasrawala), my deceased cousin (Aamir Bagasrawala) and the developer (Jubayer) who made this appliaction a possiblity in real term!\n\n\n\n
+May Allah bless the Prophet and his companions for each of the namaz observed and prayed because of this application, and may he further rewaed and bless the Ummah, my parents (Sunhera and Salim Kaliwala), my grandparents (Mumtaz and Usman Kaliwala) (Abeda and Yusuf Bagasrawala), my deceased cousin (Aamir Bagasrawala) and the developer (Md.Jubayer) who made this appliaction a possibility in real term!\n\n\n\n
 
 For any recommendation or changes, contact me on kaliwalasarfaraz@gmail.com or +91-9879151617</string>
     <string name="about_us">About Us</string>
